@@ -1,3 +1,7 @@
+2015-12-09 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/packages/asciiglyphs.tcl: character selection mechanism amended
+    * doc/xml/commands.xml: documenting ::rivet::try
+
 2015-12-07 Massimo Manghi <mxmanghi@apache.org>
     * rivet/packages/asciiglyphs/asciiglyphs.tcl: new file renamed after
     hexglyphs.tcl which now prints more than the hexadecimal character set
